--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,20 +1,16 @@
-server:
-  port: 8080
-
 spring:
+  port: 8080
   datasource:
-    url: jdbc:postgresql://postgres:5532/customer
+    url: jdbc:postgresql://localhost:5432/customer
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
-
   jpa:
     hibernate:
-      ddl-auto: create-drop #update
+      ddl-auto: create-drop # vagy "update", ha frissíteni szeretnéd az adatbázist
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show_sql: true
-
   main:
     web-application-type: servlet
