--- a/frontend/ThreeTree/package.json
+++ b/frontend/ThreeTree/package.json
@@ -19,7 +19,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
   },
-  "proxy": "http://localhost:8080",
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -28,6 +27,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "http-proxy-middleware": "^2.0.6",
     "vite": "^4.4.5"
   }
 }
