--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   port: 8080
   datasource:
-    url: jdbc:postgresql://localhost:5432/customer
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/customer
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
   jpa:
@@ -12,5 +12,3 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show_sql: true
-  main:
-    web-application-type: servlet
