--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 spring:
   port: 8080
   datasource:
@@ -11,7 +12,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
-    show_sql: true
+    show_sql: false
   mail:
     username: ${USER_EMAIL}
     password: ${USER_PASSWORD}
