Make ci-cd workflow

--- a/backend/DockerfileBackend
+++ b/backend/DockerfileBackend
@@ -2,7 +2,9 @@
 FROM maven:3.8.4-openjdk-17 AS build
 WORKDIR /app
 COPY . .
-RUN mvn clean package
+RUN mvn clean package -DskipTests
+
+
 
 # Runtime stage
 FROM openjdk:17-jdk-slim
