--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,6 +13,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set up JDK and Maven
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          maven-version: '3.8.5'
+
       - name: Checkout repository
         uses: actions/checkout@v2
 
@@ -21,7 +27,8 @@ jobs:
           cd backend
           mvn test
 
-#kjl
+
+      #kjl
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
