--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,11 +16,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'temurin' # Az Eclipse Temurin disztribúcióját használja, ami az AdoptOpenJDK utódja
+
       - name: Run unit tests
         run: |
           cd backend
           mvn test
-      
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -39,5 +44,4 @@ jobs:
           image: ${{ secrets.DOCKERHUB_USERNAME }}/express-demo:latest
           run: |
             echo "Running the docker image"
-            echo "Testing the nodejs app endpoints"
-            # Add here any additional commands you want to run inside the container
+
