Make ci-cd workflow

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -23,10 +24,9 @@ jobs:
 
       - name: Build and test backend
         run: |
-               cd backend
-               mvn package
-               mvn test
-#      mvn package -DskipTests # Teszteket kihagyva, ha csak a build sikerességét szeretnéd ellenőrizni
+          cd backend
+          mvn package
+          mvn test
 
       - name: Build frontend
         run: |
@@ -44,6 +44,15 @@ jobs:
         run: |
           docker-compose build
           docker-compose push
+
+      - name: Install Trivy
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y apt-transport-https gnupg lsb-release
+          curl -fsSL https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+          echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
+          sudo apt-get update
+          sudo apt-get install trivy
 
       - name: Docker image security scan
         run: |
