--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,4 +43,4 @@ jobs:
       - name: Build and push Docker images
         run: |
           docker-compose build
-          docker-compose push
+          ddocker-compose push nagylorinc/plant_shop
