--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,49 +1,49 @@
-name: CI-CD
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Build and test backend
-        run: |
-          cd backend
-          mvn package
-          mvn test
-
-      - name: Build frontend
-        run: |
-          cd frontend
-          npm install
-          npm run build 
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN}}
-
-      - name: Build and push Docker images
-        run: |
-          export DOCKER_HUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
-          docker-compose build
-          docker-compose push
-      
-          
+#name: CI-CD
+#
+#on:
+#  push:
+#    branches:
+#      - main
+#  pull_request:
+#    branches:
+#      - main
+#
+#jobs:
+#  build-and-push:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v2
+#
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v2
+#        with:
+#          java-version: '17'
+#          distribution: 'temurin'
+#
+#      - name: Build and test backend
+#        run: |
+#          cd backend
+#          mvn package
+#          mvn test
+#
+#      - name: Build frontend
+#        run: |
+#          cd frontend
+#          npm install
+#          npm run build
+#
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v2
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN}}
+#
+#      - name: Build and push Docker images
+#        run: |
+#          export DOCKER_HUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
+#          docker-compose build
+#          docker-compose push
+#
+#
