--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
-  port: 8080
   config:
-    import: "optional:file:./secret.properties"
+    import: "optional:file:../.env[.properties]"
+  port: 8080
   datasource:
     url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/customer
     username: ${DB_USERNAME}
