--- a/frontend/DockerfileFrontend
+++ b/frontend/DockerfileFrontend
@@ -1,4 +1,5 @@
-# BUILD REACT FRONTEND:
+
+# BUILD REACT FRONTEND
 FROM node:18.14.0-alpine as frontend
 WORKDIR /app/frontend
 COPY package.json ./
@@ -8,14 +9,14 @@ COPY . .
 RUN npm run build
 #CMD ["npm", "run","dev"]
 
-## BUILD EXPRESS FRONTEND SERVER:
+
+# BUILD EXPRESS FRONTEND SERVER
 FROM node:18.14.0-alpine as express-server
 WORKDIR /app/express-server
 COPY package.json ./
 COPY package-lock.json ./
 RUN npm install
 COPY server.js .
-COPY --from=frontend /app/frontend/dist ./static
+COPY --from=frontend /app/frontend/dist ./dist
 EXPOSE 3000
 CMD ["node", "server.js"]
-
