--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   config:
-    import: "optional:file:../.env[.properties]"
+    import: "optional:file:../../../.env[.properties]"
   port: 8080
   datasource:
     url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/customer
